@startuml
'https://plantuml.com/class-diagram
left to right direction
skinparam dpi 150
skinparam defaultTextAlignment center
skinparam wrapWidth 200

package edu.hitsz.dao {
    interface ScoreDAO {
        + {abstract} save(record): boolean
        + {abstract} loadAll(): List<ScoreRecord>
        + {abstract} getTopRecords(top): List<ScoreRecord>
    }

    class ScoreRecord {
        - playerName: String
        - score: int
        - timestamp: long
        - difficulty: String
        
        + ScoreRecord(playerName, score, timestamp, difficulty)
        + getPlayerName(): String
        + getScore(): int
        + getTimestamp(): long
        + getDifficulty(): String
        + toString(): String
    }

    class FileScoreDAO implements ScoreDAO {
        - FILE_PATH: String
        - FILE_PREFIX: String
        - FILE_SUFFIX: String
        
        + FileScoreDAO()
        + save(record): boolean
        + loadAll(): List<ScoreRecord>
        + getTopRecords(top): List<ScoreRecord>
        - getFilePath(difficulty): String
        - readFile(file): List<ScoreRecord>
        - writeFile(file, records): boolean
    }

    class Leaderboard {
        - scoreDAO: ScoreDAO
        - currentDifficulty: String
        
        + Leaderboard()
        + addRecord(score, difficulty): void
        + printLeaderboard(): void
        + printLeaderboard(difficulty): void
    }

    ScoreDAO <|-- FileScoreDAO
    Leaderboard --> ScoreDAO : uses
    FileScoreDAO --> ScoreRecord : creates
    Leaderboard --> ScoreRecord : uses
}

@enduml
